# SimplePerm

./: README.md  exam.py  pyproject.toml
simperm/: __init__.py  calculator.py  context.py  group.py  holder.py  monitor.py  node.py  user.py
simperm/processor/: __init__.py  base.py  direct.py  wildcard.py
